<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="158dp"
        android:background="@drawable/bg_dialog_update">

        <TextView
            android:id="@+id/tv_dialog_update_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/global_horizontal_margin_20"
            android:text="@string/dialog_update_title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/font_18"/>

        <TextView
            android:id="@+id/tv_dialog_update_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_dialog_update_title"
            android:layout_marginTop="@dimen/global_horizontal_margin_10"
            android:textColor="@color/black"
            android:textSize="@dimen/font_14"
            android:text="@string/dialog_update_content"/>

        <!-- 双按钮 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/global_horizontal_margin_20"
            android:layout_marginStart="@dimen/global_horizontal_margin_20"
            android:layout_marginEnd="@dimen/global_horizontal_margin_20"
            android:orientation="horizontal">

            <!-- left btn-->
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/dialog_update_cancel"
                android:textColor="#ff000000"
                android:textSize="16sp"
                android:background="@drawable/bg_b_1_round_6"
                android:layout_marginRight="@dimen/global_horizontal_margin_5"
                style="?android:attr/borderlessButtonStyle"/>


            <!-- right btn-->
            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/dialog_update_confirm"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:background="@drawable/bg_long_orange_gradient"
                android:layout_marginLeft="@dimen/global_horizontal_margin_5"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>