<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_gary_mine"
    tools:context="com.coocaa.tvpi.module.mine.MineFragment">

    <RelativeLayout
        android:id="@+id/rl_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/global_row_height_60">


        <TextView
            android:id="@+id/tv_current_device"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_below="@id/tv_username"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="2dp"
            android:layout_toRightOf="@id/mine_head_img"
            android:singleLine="true"
            android:text="共 3 台设备"
            android:textColor="@color/black_60"
            android:textSize="@dimen/font_12" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/global_horizontal_margin_30"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/mine_head_img"
            android:text="Diceroia"
            android:singleLine="true"
            android:textColor="#ff000000"
            android:textSize="@dimen/font_22" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="@dimen/global_row_height_60"
            android:layout_height="@dimen/global_row_height_60"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:src="@color/white"
            app:riv_corner_radius="33dp" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/mine_head_img"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:layout_marginLeft="22dp"
            android:src="@drawable/icon_mine_default_head"
            app:riv_corner_radius="33dp" />



    </RelativeLayout>


    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/global_horizontal_margin_20"
        android:layout_marginEnd="@dimen/global_horizontal_margin_20"
        android:layout_marginBottom="@dimen/global_horizontal_margin_20"
        android:background="@drawable/bg_mine_rl"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:id="@+id/rl_scan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/global_row_height_60">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_horizontal_margin_20"
                android:src="@drawable/icon_mine_scan" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/global_horizontal_margin_10"
                android:src="@drawable/icon_mine_in" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_row_height_60"
                android:text="@string/mine_scan"
                android:textColor="#ff000000"
                android:textSize="@dimen/font_16" />

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/global_row_height_60"
            android:layout_below="@id/rl_scan"
            android:background="#1A000000"/>

        <RelativeLayout
            android:id="@+id/rl_advice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/global_row_height_60"
            android:layout_below="@id/rl_scan">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_advice"
                android:layout_marginLeft="@dimen/font_20" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/global_horizontal_margin_10"
                android:src="@drawable/icon_mine_in" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_row_height_60"
                android:text="@string/mine_advise"
                android:textColor="#ff000000"
                android:textSize="@dimen/font_16" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/global_row_height_60"
            android:layout_below="@id/rl_advice"
            android:background="#1A000000"/>

        <RelativeLayout
            android:id="@+id/rl_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/global_row_height_60"
            android:layout_below="@id/rl_advice">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_horizontal_margin_20"
                android:src="@drawable/icon_mine_about" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/global_horizontal_margin_10"
                android:src="@drawable/icon_mine_in" />

            <TextView
                android:id="@+id/tv_version_name"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text=""
                android:textColor="#66000000"
                android:textSize="14sp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="39dp"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_row_height_60"
                android:text="@string/mine_about"
                android:textColor="#ff000000"
                android:textSize="@dimen/font_16" />

        </RelativeLayout>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/global_horizontal_margin_20"
        android:layout_marginEnd="@dimen/global_horizontal_margin_20"
        android:layout_marginBottom="@dimen/global_horizontal_margin_20"
        android:background="@drawable/bg_mine_rl">


        <RelativeLayout
            android:id="@+id/rl_lab"
            android:layout_width="match_parent"
            android:layout_height="@dimen/global_row_height_60">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_horizontal_margin_20"
                android:src="@drawable/mine_rl_lab_icon" />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/global_horizontal_margin_10"
                android:src="@drawable/icon_mine_in" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="22dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/global_row_height_60"
                android:text="@string/smart_lab"
                android:textColor="#ff000000"
                android:textSize="@dimen/font_16" />

        </RelativeLayout>
    </LinearLayout>




</LinearLayout>